# MobileRayTracer

./: .gitignore  .gitmodules  .project  LICENSE  README.md  build.gradle  error.txt  gradle.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  app-release.apk  build.gradle  proguard-rules.pro
app/Components/: CMakeLists.txt
app/Components/Cameras/: Orthographic.cpp  Orthographic.hpp  Perspective.cpp  Perspective.hpp
app/Components/Lights/: AreaLight.cpp  AreaLight.hpp  PointLight.cpp  PointLight.hpp
app/Components/MobileRT/: CMakeLists.txt
app/Components/MobileRT/src/MobileRT/: Camera.cpp  Camera.hpp  Intersection.cpp  Intersection.hpp  Light.hpp  Material.cpp  Material.hpp  ObjectLoader.cpp  Point3D.cpp  Point3D.hpp  Primitive.cpp  Primitive.hpp  RGB.cpp  RGB.hpp  Ray.cpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Utils.cpp  Utils.hpp  Vector3D.cpp  Vector3D.hpp
app/Components/ObjectLoaders/: OBJLoader.cpp  OBJLoader.hpp
app/Components/Samplers/: Constant.cpp  Constant.hpp  HaltonSeq.cpp  HaltonSeq.hpp  MersenneTwister.cpp  MersenneTwister.hpp  StaticHaltonSeq.cpp  StaticHaltonSeq.hpp  StaticMersenneTwister.cpp  StaticMersenneTwister.hpp  Stratified.cpp  Stratified.hpp
app/Components/Shaders/: DepthMap.cpp  DepthMap.hpp  DiffuseMaterial.cpp  DiffuseMaterial.hpp  NoShadows.cpp  NoShadows.hpp  PathTracer.cpp  PathTracer.hpp  Whitted.cpp  Whitted.hpp
app/Components/src/Components/Cameras/: Orthographic.cpp  Perspective.cpp
app/Components/src/Components/Lights/: AreaLight.cpp  AreaLight.hpp  PointLight.cpp  PointLight.hpp
app/Components/src/Components/ObjectLoaders/: OBJLoader.cpp
app/Components/src/Components/Samplers/: HaltonSeq.hpp  MersenneTwister.cpp  MersenneTwister.hpp  StaticHaltonSeq.cpp  StaticHaltonSeq.hpp  StaticMersenneTwister.hpp  Stratified.cpp  Stratified.hpp
app/Components/src/Components/Shaders/: DepthMap.cpp  DepthMap.hpp  DiffuseMaterial.cpp  DiffuseMaterial.hpp  NoShadows.cpp  NoShadows.hpp  PathTracer.cpp  PathTracer.hpp  Whitted.cpp  Whitted.hpp
app/GTK_Interface/: RayTracerMain.cpp  c_wrapper.cpp  c_wrapper.h
app/JNI/: DrawView.cpp  DrawView.hpp
app/MobileRT/: CMakeLists.txt  Camera.cpp  Camera.hpp  Intersection.cpp  Intersection.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  ObjectLoader.cpp  ObjectLoader.hpp  Point3D.cpp  Point3D.hpp  Primitive.hpp  RGB.cpp  RGB.hpp  Ray.cpp  Ray.hpp  RayPacket.cpp  RayPacket.hpp  Renderer.cpp  Renderer.hpp  Sampler.cpp  Sampler.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Utils.cpp  Utils.hpp  Vector3D.hpp
app/MobileRT/Accelerators/: AABB.cpp  AABB.hpp  BVH.hpp  BVH_vector.hpp  Naive.hpp  RegularGrid.cpp  RegularGrid.hpp
app/MobileRT/Boxes/: AABB.cpp  AABB.hpp
app/MobileRT/Shapes/: Plane.cpp  Plane.hpp  Rectangle.cpp  Rectangle.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
app/Scenes/: Scenes.cpp  Scenes.hpp
app/System_dependent/: CMakeLists.txt
app/System_dependent/Android_JNI/: DrawView.cpp  DrawView.hpp  Utils_dependent.hpp
app/System_dependent/Linux/: GTK_Interface.cpp  Utils_dependent.cpp  Utils_dependent.hpp  c_wrapper.cpp
app/Unit_Testing/: CMakeLists.txt  TestMain.cpp  TestPlane.cpp  TestPoint3D.cpp  TestTriangle.cpp  TestVector3D.cpp
app/release/: app-release.apk  output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: FragmentShader.glsl
app/src/main/assets/Shaders/: FragmentShader.glsl  FragmentShaderRaster.glsl  VertexShader.glsl  VertexShaderRaster.glsl
app/src/main/cpp/: .fuse_hidden00020df60000000a  .fuse_hidden00020e2b0000000c  .fuse_hidden0002140f00000011  .fuse_hidden0002147c00000013  .fuse_hidden00072d820000002a  DrawView.cpp  DrawView.h  DrawView.hpp  DrawViewImpl.cpp  DrawViewImpl.h  Scenes.cpp  Scenes.h  Scenes.hpp  main.cpp  makefile  native-lib.cpp  raytracer
app/src/main/cpp/Cameras/: Perspective.cpp  Perspective.h
app/src/main/cpp/Lights/: PointLight.cpp  PointLight.h
app/src/main/cpp/MobileRT/: All.h  All.hpp  Constants.h  Constants.h___jb_old___  Constants.hpp  Intersection.cpp  Intersection.cpp___jb_old___  Intersection.h  Intersection.hpp  Light.cpp  Light.h  Light.hpp  Material.cpp  Material.h  Material.hpp  Plane.cpp  Plane.h  Plane.hpp  Point.cpp  Point.h  Point.hpp  Point3D.cpp  Point3D.h  Primitive.cpp  Primitive.h  Primitive.hpp  RGB.cpp  RGB.h  RGB.hpp  RTCamera.cpp  RTCamera.h  RTCamera.hpp  Ray.cpp  Ray.h  Ray.hpp  RayTrace.cpp  RayTrace.h  RayTrace.hpp  RayTracer.cpp  RayTracer.h  (+45 more)
app/src/main/cpp/Samplers/: Jittered.cpp  Jittered.h  Stratified.cpp  Stratified.h
app/src/main/cpp/Shaders/: NoShadows.h  Whitted.cpp  Whitted.h
app/src/main/cpp/Shapes/: Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-w820dp/: strings.xml
jniLibs/: .gitignore  CMakeLists.txt  RayTracerMain.cpp  RayTracerMain.hpp  Scenes.cpp  c_wrapper.cpp  c_wrapper.h  c_wrapper.hpp  gtest  makefile  plot.sh  profile.sh  tidy.out
jniLibs/Components/: .project  CMakeLists.txt  build.gradle  proguard-rules.pro
jniLibs/Components/src/main/: AndroidManifest.xml
jniLibs/GnuPlot/: plot_output.gp
jniLibs/GoogleUnitTest/: Test.cpp  Test.gto  TestMain.cpp  TestPlane.cpp  TestPoint3D.cpp  TestTriangle.cpp  TestVector3D.cpp
jniLibs/MobileRT/: .project  CMakeLists.txt  build.gradle  proguard-rules.pro
jniLibs/MobileRT/src/main/: AndroidManifest.xml
jniLibs/Plot_Scripts/: parser_median.awk  parser_out.awk  plot.sh  plot_output.gp
jniLibs/website_rt/: app.js  package.json
jniLibs/website_rt/Controllers/: HomeController.js  RayTracerController.js  TodoController.js
jniLibs/website_rt/JavaScripts/: app1.js  app10.js  app2.js  app3.js  app4.js  app5.js  app6.js  app7.js  app8.js  app9.js  stuff.js
jniLibs/website_rt/Public/Assets/JavaScripts/: WebGL.js  (+2 more)
jniLibs/website_rt/Views/: Contact-success.ejs  Contact.ejs  Index.ejs  Profile.ejs  RayTracer.ejs  Todo_list.ejs
jniLibs/website_rt/Views/Partials/: Navigation.ejs
(+298 files in other folders)
